@@ -60,7 +60,7 @@ role PDF::Image
                                                   # If this entry has a nonzero value, SMask should not be specified
     has PDF::COS::Name $.Name is entry;           # (Required in PDF 1.0; optional otherwise) The name by which this image XObject is referenced in the XObject subdictionary of the current resource dictionary.
                                                   # Note: This entry is obsolescent and its use is no longer recommended.
-    has UInt $.StructParent is entry;             # (Required if the image is a structural content item; PDF 1.3) The integer key of the image’s entry in the structural parent tree
+    has UInt $.StructParent is entry(:alias<struct-parent>);             # (Required if the image is a structural content item; PDF 1.3) The integer key of the image’s entry in the structural parent tree
     has Str $.ID is entry;                        # (Optional; PDF 1.3; indirect reference preferred) The digital identifier of the image’s parent Web Capture content set
     has Hash $.OPI is entry;                      # (Optional; PDF 1.2) An OPI version dictionary for the image. If ImageMask is true, this entry is ignored.
     has PDF::Metadata::XML $.Metadata is entry;     # (Optional; PDF 1.4) A metadata stream containing metadata for the image
