@@ -1,4 +1,5 @@
 Release 0.3.9
+- Rename PDF::StructElem.structure-type() alias to .tag()
 - Minor refactor of destination coercements. Add PDF::Names; extracted from PDF::Catalog.
 - Added classes PDF::Sound PDF::Action::Sound
 
